# game

./: .clang-format  .gitignore  CMakeLists.txt
config/: keybinds.json  keybinds.yaml  settings.json  settings.yaml
resources/TGUI/: DebugPanel.txt  MainMenu.txt  Menu.txt  test.txt
resources/TGUI/themes/: Dark.txt
run/config/: keybinds.json  settings.json
src/: Basic.hpp  Configuration.cpp  Configuration.hpp  Error.hpp  Game.cpp  Game.hpp  GameContext.hpp  Keybinds.cpp  Keybinds.hpp  Utils.hpp  main.cpp
src/config/: Action.hpp  ConfigManager.cpp  ConfigManager.hpp  Configuration.cpp  Configuration.hpp  KeyAction.hpp  Keybinds.cpp  Keybinds.hpp
src/gui/: GuiButton.cpp  GuiButton.hpp  GuiContainer.hpp  GuiElement.hpp  GuiFrameRate.cpp  GuiFrameRate.hpp  GuiInfo.cpp  GuiInfo.hpp  GuiText.hpp
src/render/: CameraView.cpp  CameraView.hpp  RenderManager.cpp  RenderManager.hpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  UIManager.hpp
src/render/ui/: UIComponent.cpp  UIComponent.hpp  UIManager.cpp  UIManager.hpp
src/resources/: ResourceManager.cpp  ResourceManager.hpp  Resources.cpp  Resources.hpp  TextureManager.hpp
src/state/: GameAction.hpp  MainMenuState.cpp  MainMenuState.hpp  MenuState.cpp  MenuState.hpp  PlayingState.cpp  PlayingState.hpp  State.cpp  State.hpp  StateManager.hpp
src/state/playing/: CameraView.cpp  CameraView.hpp  Grid.cpp  Grid.hpp  PlayingState.cpp  View.hpp  (+1 more)
src/ui/: Input.hpp  UIManager.hpp
src/universe/: Universe.cpp  Universe.hpp
src/util/: Basic.hpp  Error.hpp  Utils.hpp
src/world/: Grid.cpp  Grid.hpp  World.cpp  World.hpp
(+10 files in other folders)
